<resources>
    <string name="app_name">WhatsApp</string>
    <string name="edt_nome_hint">Digite seu nome</string>
    <string name="edt_telefone_hint">9 9963-6687</string>
    <string name="edt_ddd_hint">85</string>
    <string name="edt_cod_pais_hint">+55</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="tv_validacao">Validação</string>
    <string name="tv_descricao">Você recebeu um código SMS para validação, digite o código de validação abaixo:</string>
    <string name="edt_codigo">Digite o código</string>
    <string name="btn_validar">VALIDAR</string>
    <string name="edt_email_hint">Digite seu email</string>
    <string name="edt_password_hint">Digite sua senha</string>
    <string name="btn_logar">LOGAR</string>
    <string name="edt_nome_hin">Digite seu nome</string>
    <string name="cad_edt_email_hint">Digite seu email</string>
    <string name="cad_edt_password_hint">Digite sua senha</string>
    <string name="btn_save">CADASTRAR</string>
    <string name="menu_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_message_hint">Digite aqui...</string>
</resources>
