<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="whatsapp.rest.com.br.whatsapp.activity.CadastroUsuarioActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/iv_logo_width"
            android:layout_height="@dimen/iv_logo_height"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:src="@drawable/user" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/edt_nome_hin"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_nome"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/cad_edt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/cad_edt_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below="@id/edt_password"
            android:background="?attr/colorAccent"
            android:text="@string/btn_save"/>

    </RelativeLayout>
</RelativeLayout>
