<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="?attr/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/iv_logo_width"
            android:layout_height="@dimen/iv_logo_height"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:src="@drawable/logo" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_margin="16dp"
            android:hint="@string/edt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/edt_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_margin="16dp"
            android:background="?attr/colorAccent"
            android:text="@string/btn_logar" />

        <TextView
            android:id="@+id/tv_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Não tem conta? Cadastre-se"
            android:layout_margin="8dp"
            android:layout_below="@id/btn_login"
            android:textColor="@android:color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
